--- a/client/assets/css/app.css
+++ b/client/assets/css/app.css
@@ -11,17 +11,16 @@ body {
     font-size: 14px;
     line-height: 1.42857143;
     color: #4A4A4A;
-    /*background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#DFDCDC)) fixed;*/
 }
 h1 {
     font-family: CenturyGothic-Bold, sans-serif;
     font-size: 36px;
 }
 
-/*main {*/
-    /*background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#DFDCDC));*/
-    /*height: 100%;*/
-/*}*/
+main {
+    background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#DFDCDC));
+    height: 100%;
+}
 
 article,
 aside,
