--- a/client/assets/css/app.css
+++ b/client/assets/css/app.css
@@ -17,7 +17,7 @@ h1 {
     font-size: 36px;
 }
 
-main {
+#root {
     background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#DFDCDC));
     height: 100%;
 }
