--- a/client/js/hah-app/hah-font.css
+++ b/client/js/hah-app/hah-font.css
@@ -6,8 +6,8 @@
 	src: local('gt-walsheim'), local('gt-walsheim'),
 		url('./fonts/GT-Walsheim-Regular.woff') format('woff'),
 		/* Modern Browsers */ url('./fonts/GT-Walsheim-Regular.eot?#iefix')
-			format('embedded-opentype'); /* IE6-IE8 */
-	/*url('../fonts/open-sans-v13-latin-regular.woff2') format('woff2'), !* Super Modern Browsers *!*/
-	/*url('../fonts/open-sans-v13-latin-regular.ttf') format('truetype'), !* Safari, Android, iOS *!*/
-	/*url('../fonts/open-sans-v13-latin-regular.svg#OpenSans') format('svg'); !* Legacy iOS *!*/
+			format('embedded-opentype'),
+		/* IE6-IE8 */ url('./fonts/GT-Walsheim-Regular.woff2') format('woff2'),
+		/* Super Modern Browsers */ url('./fonts/GT-Walsheim-Regular.ttf')
+			format('truetype'); /* Safari, Android, iOS */
 }
