--- a/client/js/hah-app/hah-font.css
+++ b/client/js/hah-app/hah-font.css
@@ -8,7 +8,7 @@
 @font-face {
 	font-family: 'hah-regular';
 	font-style: normal;
-	font-weight: 400;
+	font-weight: normal;
 	src: url('../fonts/GT-Walsheim-Regular.woff') format('woff');
 }
 
